so, uh, anyway, your mom......
you know what? i had a great insult but instead imma be nice today and mute yall for 80,000. good night, chat.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li>marth</li>
            </ul>
            meme:
-           <img class="image" src="../static/images/code_no_worky.png"></img>
+           <img class="image" src="https://i.pinimg.com/originals/4f/82/8d/4f828d05f82b8b7aedfe8be6a7d9d2a3.png"></img>
         </p>
     
     
