--- a/story.html
+++ b/story.html
@@ -26,7 +26,7 @@
             <li>then i leave to go to mr callaghan's room for russian (w teacher)</li>
            </ul>
         
-        anyway <a href="/">story time over</a> good night chat
+        anyway story time over good night chat
         </p>
     </div> 
 </body>
