font + image fix
i added a font (source code pro)
the meme path is correct
good night chat

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li>marth</li>
            </ul>
            meme:
-           <img class="image" src="../static/images/code_no_worky.png"></img>
+           <img class="image" src="/code_no_worky.png"></img>
         </p>
     
     
