--- a/story.html
+++ b/story.html
@@ -15,8 +15,9 @@
         gradient.initGradient("#canvas");
     </script>
     <div class="body">
-        <p>so basically mr luu kept calling me mark and as he walked in to ms mugges room to teach his pd 9 class with the following interaction taking place:
-           <ul>
+        <p>so basically mr luu kept calling me mark and as he walked in to ms mugges room to teach his pd 9 class the following interaction took place:
+           
+            <ul>
             <li>me: "yo mr luu"</li>
             <li>mr luu: "yo whats good mark"</li>
             <li>me:"im convinced you just dont remember my name and are using the guise of a joke to mask it"</li>
